# Minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  index.html  minecraft.d.ts  minecraft.js  minecraft_bg.wasm  minecraft_bg.wasm.d.ts  package.json  run-desktop.py  run-web.py
.github/workflows/: build.yml  build_and_run_tests.yml  deploy_web_version.yml
pkg/: README.md  minecraft.d.ts  minecraft.js  minecraft_bg.wasm  minecraft_bg.wasm.d.ts
src/: app.rs  camera.rs  camera_controller.rs  lib.rs  main.cpp  main.rs  path.rs  resources.rs  voxel.rs  webgpu.rs
src-web/: index.html
src/webgpu/: mesh.rs  model.rs  renderer.rs  run_app.rs  shader.wgsl  texture.rs
