[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.6"
log = "0.4"
wgpu = "23.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.16", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = [
    "png",
    "jpeg",
] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0.1", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
reqwest = { version = "0.11" }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
